CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
CMAKE_POLICY(VERSION 3.1)
INCLUDE(ExternalProject)

IF (CMAKE_CROSSCOMPILING)
    MESSAGE(STATUS "### Cross compiling ### ")
    SET(CFLAGS "-isystem ${CMAKE_BINARY_DIR}/local/include ${CMAKE_C_FLAGS}")
    SET(CXXFLAGS "-isystem ${CMAKE_BINARY_DIR}/local/include ${CMAKE_CXX_FLAGS}")
    IF (HOST MATCHES i686-apple-darwin)
        SET(LDFLAGS "-L${CMAKE_BINARY_DIR}/local/lib -m32")
    ELSE ()
        SET(LDFLAGS -L${CMAKE_BINARY_DIR}/local/lib)
    ENDIF ()

    SET(CROSS_ARGS CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER} AR=${CMAKE_AR} RANLIB=${CMAKE_RANLIB} CFLAGS=${CFLAGS} CPPFLAGS=${CFLAGS} CXXFLAGS=${CXXFLAGS} LDFLAGS=${LDFLAGS})
    SET(HOST_ARGS --host=${HOST})
ELSE ()
    MESSAGE(STATUS "### Not cross compiling ###")
ENDIF ()

IF (NOT HOST MATCHES "^.*musl.*" AND NOT MINGW)
    # musl toolchain is used for static builds. libcec only builds shared library
    IF (NOT CMAKE_COMPILER_IS_GNUCC)
        # gcc fails to compile libcec
        ADD_SUBDIRECTORY(libplatform)
        ADD_SUBDIRECTORY(libcec)
    ENDIF ()
    ADD_SUBDIRECTORY(libxdg-basedir)
ENDIF ()

IF (NOT HOST MATCHES "^.*mingw.*" AND NOT MINGW AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
    ADD_SUBDIRECTORY(libunwind)
ENDIF ()

ADD_SUBDIRECTORY(pugixml)
ADD_SUBDIRECTORY(mongoose)
ADD_SUBDIRECTORY(libupnp)
ADD_SUBDIRECTORY(ffmpeg)
ADD_SUBDIRECTORY(libjpeg-turbo)
ADD_SUBDIRECTORY(libmad)
ADD_SUBDIRECTORY(openal)
ADD_SUBDIRECTORY(flac)
ADD_SUBDIRECTORY(sqlite)
ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(libpng)
ADD_SUBDIRECTORY(taglib)
ADD_SUBDIRECTORY(libuv)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Darwin" AND NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
    ADD_SUBDIRECTORY(alsa-lib)
    ADD_DEPENDENCIES(openal-soft alsa-lib)
ENDIF ()

