CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES  DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.." DEFINITION UTILS_LIBRARIES)

SET(TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/testdata)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/doozytestconfig.h.in ${CMAKE_BINARY_DIR}/doozytestconfig.h)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..
    ${UTILS_INCLUDE_DIRS}
    ${AUDIO_INCLUDE_DIRS}
    ${UPNPFRAMEWORK_INCLUDE_DIRS}
    ${SERVER_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${AUDIO_LIBRARY_DIRS}
    ${IMAGE_LIBRARY_DIRS}
    ${UTILS_LIBRARY_DIRS}
    ${UPNPFRAMEWORK_LIBRARY_DIRS}
    ${SERVER_LIBRARY_DIRS}
)

SET(LINK_LIBS
    ${AUDIO_LIBRARIES}
    ${IMAGE_LIBRARIES}
    ${UTILS_LIBRARIES}
    ${UPNPFRAMEWORK_LIBRARIES}
    ${SERVER_LIBRARIES}
    doozyrenderer
)

ADD_EXECUTABLE(doozytest EXCLUDE_FROM_ALL
    gmock-gtest-all.cpp
    eventnotification.h
    eventlistenermock.h
    main.cpp
    librarytest.cpp
    librarydatabasetest.cpp
    settingsmocks.h
    ../common/settings.cpp
)

TARGET_LINK_LIBRARIES(doozytest
	${LINK_LIBS}
)

ADD_TEST(NAME DoozyTests COMMAND doozytest)
ADD_DEPENDENCIES(check doozytest)